tests/fixtures/invalid/list_mul_none.py
# Cannot multiply List[int] and None
x: list[int] = [1, 2, 3] * None
